--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   # UI
   intl: ^0.18.1
   cached_network_image: ^3.3.0
+  firebase_storage: ^11.3.0
+  image_picker: ^0.8.7+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
